[gd_scene load_steps=2 format=3 uid="uid://d2itjnurg1eiu"]

[ext_resource type="Script" path="res://scenes/menu/settings.gd" id="1_5hbm6"]

[node name="Settings" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -384.0
offset_bottom = -224.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5hbm6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
offset_right = 384.0
offset_bottom = 224.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "settings_musicvolume"

[node name="Volume" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -100.0
max_value = 0.0

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "settings_screentype"

[node name="ScreenThingy" type="OptionButton" parent="Panel/VBoxContainer"]
process_mode = 3
layout_mode = 2
item_count = 2
popup/item_0/text = "settings_screen_windowed"
popup/item_1/text = "settings_screen_fullscreen"
popup/item_1/id = 1

[node name="Label3" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "settings_language"

[node name="Language" type="OptionButton" parent="Panel/VBoxContainer"]
layout_mode = 2
item_count = 2
popup/item_0/text = "settings_language_english"
popup/item_1/text = "settings_language_french"
popup/item_1/id = 1

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "settings_back"

[connection signal="value_changed" from="Panel/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="item_selected" from="Panel/VBoxContainer/ScreenThingy" to="." method="_on_screen_thingy_item_selected"]
[connection signal="item_selected" from="Panel/VBoxContainer/Language" to="." method="_on_language_item_selected"]
[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_button_pressed"]
